--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 [submodule "lib/nativo"]
 	path = lib/nativo
-	url = https://github.com/latamswap/nativo
+	url = https://github.com/LatamSwap/nativo
