--- a/foundry.toml
+++ b/foundry.toml
@@ -7,11 +7,12 @@ ffi = true
 fs_permissions = [{ access = "read-write", path = "./" }]
 
 solc = "0.8.20"
+evm_version = 'paris'
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
-[profile.optimizor]
-viaIR = true
+#[profile.optimizor]
+#viaIR = true
 
 optimize = true
 optimize_runs = 20000
