--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,7 @@ ffi = true
 fs_permissions = [{ access = "read-write", path = "./" }]
 
 solc = "0.8.20"
-evm_version = 'paris'
+evm_version = "paris"
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
